[tool.poetry]
name = "nbdefense-docs"
version = "0.0.0"
description = "NB Defense Documentation"
authors = ["ProtectAI <community@protectai.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
mkdocs = "1.4.2"
mkdocs-material = "8.5.10"
mkdocs-meta-descriptions-plugin = "2.2.0"
lightgallery = "0.5"
