[tool.poetry]
name = "nbdefense-docs"
version = "0.0.0"
description = "NB Defense Documentation"
authors = ["ProtectAI <community@protectai.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
mkdocs = "1.4.2"
mkdocs-material = "8.5.10"
mkdocs-meta-descriptions-plugin = "2.2.0"
mkdocs-git-authors-plugin = "0.7.0"
mkdocs-git-revision-date-localized-plugin = "1.2.0"
lightgallery = "0.5"
mkdocs-minify-plugin = "^0.6.4"
